article-api/k8s/3-article-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: article-api-svc
spec:
  type: NodePort
  selector:
    app: article-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-api-pod
  template:
    metadata:
      labels:
        app: article-api-pod
    spec:
      containers:
        - name: article-api
          image: adndev29/myrepo:article-api
          ports:
            - containerPort: 8080
      imagePullSecrets:
           - name: myhub-secret # Nom de votre secret
