article-api/k8s/4-article-ui.yaml

apiVersion: v1
kind: Service
metadata:
  name: article-ui-svc
spec:
  type: NodePort
  selector:
    app: article-ui-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-ui-pod
  template:
    metadata:
      labels:
        app: article-ui-pod
    spec:
      containers:
        - name: article-ui-nextjs
          image: adndev29/myrepo:article-ui-nextjs
          ports:
            - containerPort: 3000
      imagePullSecrets:
           - name: myhub-secret # Nom de votre secret
